--- a/CSS/home.css
+++ b/CSS/home.css
@@ -107,7 +107,7 @@ ul {
 li {
     display: inline;
     background-color: var(--secondary-shadow);
-    
+
 }
 
 li a {
@@ -165,6 +165,45 @@ p.intro {
     margin: 0 auto;
     text-align: justify;
     padding-top: 2rem;
+}
+
+/* Image styles */
+
+/* Gallery styles */
+.row-second {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1280px;
+    margin: auto;
+}
+
+.column {
+    flex: 33.33%;
+    max-width: 33.33%;
+    padding: 0 4px;
+    max-height: 250px;
+}
+
+.column img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .column {
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        flex: 100%;
+        max-width: 100%;
+    }
 }
 
 /* Background colors */
